--- a/app/src/main/res/layout/adapter_posts.xml
+++ b/app/src/main/res/layout/adapter_posts.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="75dp"
+        android:layout_height="80dp"
         android:orientation="horizontal">
 
         <!-- Poster's Profile -->
@@ -36,16 +36,16 @@
                             android:paddingTop="5dp"
                             android:text="\@USERNAME"
                             android:textColor="@android:color/darker_gray"
-                            android:textSize="10dp"
+                            android:textSize="12dp"
                             android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/postCaption"
                         android:layout_width="match_parent"
-                        android:layout_height="25dp"
+                        android:layout_height="30dp"
                         android:text="CAPTION"
                         android:textColor="#000000"
-                        android:textSize="12dp" />
+                        android:textSize="10dp" />
 
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/userTagsRecycle"
@@ -184,6 +184,7 @@
                 android:contentDescription="Post Options"
                 android:padding="5dp"
                 android:scaleType="center"
+                android:visibility="gone"
                 android:src="@drawable/icon_edit_24" />
 
         </LinearLayout>
