--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -4,10 +4,28 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="8dp">
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical" />
+        >
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"
+            />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>    <TextView
+    android:layout_width="match_parent"
+    android:layout_height="0dip"
+    android:layout_weight="0.92"
+    android:layout_gravity="center"
+    android:gravity="center"
+    android:textSize="30sp"
+    android:id="@+id/list_empty"
+    android:text="There are no posts to show here..."/>
+
 </LinearLayout>
