--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/background_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,9 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -24,7 +23,7 @@
     <ImageView
         android:id="@+id/logo"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="75dp"
         android:layout_gravity="center"
         android:layout_weight="10"
         android:adjustViewBounds="true"
@@ -43,9 +42,22 @@
         />
 
     <TextView
+        android:id="@+id/loadingMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="You are about to enter the world of art..."
+        android:textSize="16sp"
+        android:textStyle="italic"
+        android:visibility="gone"
+        android:layout_gravity="center"
+        android:textColor="@android:color/black"
+        />
+
+
+    <TextView
         android:id="@+id/textLogo"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="154dp"
         android:layout_gravity="center"
         android:layout_weight="5"
         android:paddingStart="20dp"
@@ -65,27 +77,29 @@
         android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/white_translucency_gradient_login"
         android:hint="Username"
         android:inputType="text"
         android:maxLength="25"
+        android:minHeight="48dp"
         android:padding="10dp"
-        android:textSize="20sp"
-        android:layout_marginBottom="16dp"/>
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/password"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@drawable/white_translucency_gradient_login"
+        android:layout_marginBottom="32dp"
 
+        android:background="@drawable/white_translucency_gradient_login"
         android:hint="Password"
         android:inputType="text"
         android:maxLength="25"
+        android:minHeight="48dp"
         android:padding="10dp"
-        android:textSize="20sp"
-        android:layout_marginBottom="32dp"/>
+        android:textSize="20sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
