--- a/app/src/main/res/layout/adapter_search_post_tags.xml
+++ b/app/src/main/res/layout/adapter_search_post_tags.xml
@@ -11,7 +11,7 @@
         android:layout_height="60dp"
         android:padding="5dp"
         android:background="@drawable/background_transparent_round5"
-        android:orientation="horizontal">
+        android:orientation="horizontal" android:id="@+id/tag_container">
 
         <TextView
             android:id="@+id/tagName"
